loader and ag grid header overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7055,9 +7055,11 @@ body {
   .ag-paging-row-summary-panel {
     display: none !important;
   }
+
   .ag-root-wrapper-body.ag-layout-auto-height {
     border-bottom: 1px solid #e5eaf9;
   }
+
   .nodate-section {
     bottom: 61px !important;
   }
@@ -8824,14 +8826,8 @@ table.group-process-table {
   }
 }
 
-.report-listing-page {
-  .loader_container {
-    z-index: 1000;
-  }
-}
-
 .report-grid .ag-header-viewport {
-  z-index: 999;
+  z-index: 1;
 }
 
 .report-grid .ag-focus-managed,
@@ -8856,5 +8852,5 @@ table.group-process-table {
 .report-grid .ag-pinned-right-header {
   overflow: hidden !important;
   background: #fff;
-  z-index: 999;
+  z-index: 1;
 }
